# game

./: README.md  constants.py  main.py  player.py  pyproject.toml  title.py
assets/: BG2.tsx  BG3.tsx  Decors.tsx  map1.json
assets/maps/: BG1.tsx  forrest-tiles.tsx  map1.json
game/: pyproject.toml
game/tests/: test_game.py
sockets/: server.py  server2.py
