[tool.poetry]
name = "multishooter"
version = "0.1.0"
description = ""
authors = ["David Hecker <heckerdw@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
black = "^22.1.0"
flake8 = "^4.0.1"
pillow = "9.0.0"
arcade = "^2.6.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"